<resources>
    <string name="app_name">Owl SMS</string>

    <!-- ======================================================================================= -->
    <!-- Menu titles -->

    <string name="title_activity_refresh">Refresh information</string>
    <string name="title_activity_sendsms">Send Message</string>
    <string name="title_activity_lookup">Phone number information</string>
    <string name="title_activity_accsec">2FA and Phone Verification</string>
    <string name="title_activity_dev">Development</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="title_activity_deleteconversation">Delete this conversation messages</string>

    <!-- ======================================================================================= -->
    <!-- Send SMS Panel -->
    <string name="sendsms_send">Send</string>
    <string name="sendsms_set">Refresh</string>

    <!-- Lookup Panel -->
    <string name="lookup_lookup">Lookup</string>

    <!-- ======================================================================================= -->
    <!-- About Text Panel -->
    <string name="about_title">Owl SMS</string>
    <string name="about_intro">
        This application makes requests directly to the Twilio services to send, receive, and manage messages; and retrieve the account\'s list of SMS capable phone numbers.
        \n
    </string>

    <string name="about_asis">
        Owl SMS is offered \"as is\", without warranty or guarantee.
    </string>
    <string name="about_version">
        \nVersion: 2.0
        \nRelease date: November 18, 2017
        \n
        \nThis application is not a Twilio company application, even though it was developed by Twilio employees. There is a saying within the company, "Just draw the Owl." This is our drawing of an SMS application.
    </string>
    <!-- \n Draw the Owl: https://www.youtube.com/watch?v=dwSe2imUyvg -->

    <!-- ======================================================================================= -->
    <string name="about_twiliosetup">
        Twilio Account Setup
    </string>
    <string name="about_twilioaccount">
        To use Owl SMS, you are required to have a Twilio account with at least one SMS capable phone number.
        \n
        \nGo to http://Twilio.com/console to get and manage your account.
        \n
        \nThe account SID and auth token is located on the page when you first log in.
        \n
        \nYou can use a free Twilio Trial account with Owl SMS, however, take note of the restrictions. For example, you can only send and receive messages, to and from, phone numbers you have pre-verified. For more information, search for \"How does Twilio\'s Free Trial work?\"
    </string>
    <string name="about_noresponse_title">
        Remove the SMS Automatic Reply
    </string>
    <string name="about_noresponse">
        \nBy default a Twilio phone number is configured with an automatic reply which you will want to stop.
    \n
    \n1. In the Twilio Console, go to managing phone numbers:
    \nhttps://www.twilio.com/console/phone-numbers/incoming
        \n
    \n2. Click your phone number.
        \nNote: Messaging, A MESSAGE COMES IN, is set to: Webhook.
        \nChange, Webhook to TwiML.
        \nNow, to the right is a circle icon with a plus sign in the middle.
        \nClick the icon.
        \nIn the New TwiML Bin popup form, enter:
        \nFriendly Name: NoSmsResponse
        \nBelow, in the codebox, enter the following TwiML:
        \n&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;
        \n&lt;Response/&gt;
        \n
        \nBelow the codebox, is the message, Valid TwiML.
        \n
        \n3. Click Create. The popup form disappears.
        \n
    \n4. Click Save.
    \n
        \nNow, when a message is sent to your Twilio phone number, there is no automatic reply.
    </string>
    <string name="about_privacy_policy_title">
        Privacy Notice
    </string>
    <!-- Based on a sample from: https://www.bbb.org/greater-san-francisco/for-businesses/toolkits1/sample-privacy-policy/ -->
    <string name="about_privacy_policy">
        This privacy notice discloses the privacy practices used in the Owl SMS application. This privacy notice applies solely to information used by the Owl SMS application.
        \n
        \n--- Information Collection, Use, and Sharing ---
        \n
        \nYour Google Contact information (Names, phone numbers, and phone number types) is read into the application\'s electronic working memory. Only one Google Contacts phone number, and the related name, is stored on the device at any time. The stored data is encrypted.
        \n
        \nYou enter your Twilio account information (SID and auth token) into the application. The Twilio account information is used to retrieve your Twilio account phone numbers. Your Twilio account information is stored encrypted on the device. It is only used to give you access to the Twilio services to send and retreive SMS messages, and lookup phone number information using Twilio\'s Lookup API.
        \n
        \nYour Google Contacts and Twilio account information is not shared by Owl SMS. Your Google Contacts and Twilio account information, are only used in the application, and between the application and the Twilio online services.
        \n
        \n--- Security ---
        \n
        \nThe phone numbers you enter into Owl SMS, your Google Contact phone numbers, and your entered SMS messages, are transmitted between Owl SMS and the Twilio services using the encyrpted protocol, HTTPS.
        \n
        \nEncryption is used to protect information transmitted online between the applcation and the Twilio services (HTTPS). Information stored on the device is also encrypted.
        \n
    </string>
    <string name="about_published_by">
        Published by Stacy David, Tiger Farm Press
        \nNovember 19, 2017, California, USA
    </string>

    <!-- ======================================================================================= -->
    <!-- Strings related to General program messages -->
    <!-- getString(R.string.MessagesSent) -->

    <string name="MessagesSent">+ Message sent.</string>
    <string name="MessagesDeleted">+ Messages deleted.</string>
    <string name="NoMessages">+ No messages.</string>

    <!-- ======================================================================================= -->
    <!-- Strings related to Settings -->

    <string name="labelSid">Account SID</string>
    <string name="labelToken">Account Auth Token</string>
    <string name="labelGmtOffset">Timezone GMT offset</string>
    <string name="buttomUpdate">Update</string>

    <string name="pref_header_twilio">Twilio Account</string>
    <string name="pref_title_account_sid">Account SID</string>
    <string name="pref_title_account_token">Account Auth Token</string>

    <!-- ======================================================================================= -->
    <!-- General settings samples displayed, but not used -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Enter your name</string>

    <string name="pref_default_twilio_phone_number">Enter your Twilio phone number</string>

    <!-- Reference: https://greenwichmeantime.com/time-zone/asia/india/time/ -->
    <string name="pref_title_gmt_offset">GMT hours offset for local time</string>
    <string-array name="gmt_offset_labels">
        <item>0: GMT, London, UK</item>
        <item>-12</item>
        <item>-11</item>
        <item>-10</item>
        <item>-9</item>
        <item>-8: PT, California</item>
        <item>-7</item>
        <item>-6</item>
        <item>-5: ET, Toronto and New York</item>
        <item>-4: Nova Scotia</item>
        <item>-3.5: Newfoundland</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0: GMT, London, UK</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>5.5: India</item>
        <item>6</item>
        <item>7: Thailand</item>
        <item>8: Hong Kong, Singapore, China</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <!-- Note, Newfoundland is -3.5 because Newfoundland time is negative and the TwSms.localDateTime simply adds +0.05.-->
    <string-array name="gmt_offset_values">
        <item>0</item>
        <item>-12</item>
        <item>-11</item>
        <item>-10</item>
        <item>-9</item>
        <item>-8</item>
        <item>-7</item>
        <item>-6</item>
        <item>-5</item>
        <item>-4</item>
        <item>-4.5</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>5.5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <!-- Other examples -->

    <!-- Enable/disable (true/false) -->
    <string name="pref_title_social_recommendations">Enable notifications</string>
    <string name="pref_description_social_recommendations">
        This feature is not implemented.
    </string>

    <!-- Popup radio buttons -->
    <string name="pref_title_add_friends_to_messages">When do you want to be notified?</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>Sometimes</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

</resources>
