<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_title_display_name"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:defaultValue="@string/pref_default_display_name" />

    <EditTextPreference
        android:key="twilio_phone_number"
        android:title="@string/pref_title_twilio_phone_number"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:defaultValue="@string/pref_default_twilio_phone_number" />

    <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_gmt_offset"
        android:defaultValue="-7"
        android:entries="@array/pref_gmt_offset_list_titles"
        android:entryValues="@array/pref_gmt_offset_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <SwitchPreference
        android:key="example_switch"
        android:title="@string/pref_title_social_recommendations"
        android:defaultValue="true"
        android:summary="@string/pref_description_social_recommendations" />

    <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_add_friends_to_messages"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
