<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tfpsms.tfp.com.twiliosms.com.tfp.tfpsms.MainActivity">

    <!--android:background="#ff00"-->
    <item
        android:id="@+id/spinner"
        android:title="Spinner"
        app:showAsAction="always"
        app:actionViewClass="android.widget.Spinner" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/title_activity_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sendsms"
        android:orderInCategory="100"
        android:title="@string/title_activity_sendsms"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lookup"
        android:orderInCategory="100"
        android:title="@string/title_activity_lookup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />

</menu>
