<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_settings"
    tools:context="com.tfp.tfpsms.SettingsActivity">

    <!-- =================================== -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <!-- =================================== -->
    <RelativeLayout
        android:id="@+id/TwilioBox"
        android:background="@drawable/borders_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelSid"
            android:text="@string/labelSid"
            android:paddingTop="9px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"/>
        <Button
            android:id="@+id/updateButton"
            android:text="@string/buttomUpdate"
            android:textSize="@dimen/buttonTextSize"
            android:textColor="@color/buttonTextColor"
            android:background="@color/buttonBackgroundColor"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <LinearLayout
            android:id="@+id/TwilioSid"
            android:layout_below="@+id/labelSid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/accountSid"
                android:textSize="@dimen/buttonTextSize"
                android:layout_width="@dimen/editAccountFieldWidth"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>

        <TextView
            android:id="@+id/labelToken"
            android:text="@string/labelToken"
            android:layout_below="@+id/TwilioSid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/TwilioToken"
            android:layout_below="@+id/labelToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/accountToken"
                android:textSize="@dimen/buttonTextSize"
                android:layout_width="@dimen/editAccountFieldWidth"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>

        <TextView
            android:id="@+id/labelGmtOffset"
            android:text="@string/labelGmtOffset"
            android:layout_below="@+id/TwilioToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"/>
        <Spinner
            android:id="@+id/gmtOffsetSpinner"
            android:title="Spinner"
            android:paddingBottom="21px"
            android:layout_below="@+id/labelGmtOffset"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/showResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="9px"
        android:textColor="#000000"
        android:textSize="14sp"
        android:text=""/>

</LinearLayout>
